Depsgraph assert after loading file with Mask Node #57384

Closed
opened 2018-10-25 22:24:07 +02:00 by Antonio Vazquez · 9 comments

Windows 10 version compiled with last source code

To repoduce:

  1. Open default cube
  2. Render on Eevee
  3. Enable Compositor
  4. Set Use node to ON
  5. Add a Mask Node
  6. Using Image editor create a mask using Ctrl + Mouse
  7. Select Mask in Mask Node
  8. Save File
  9. Reload File
  10. Crash

Or you can use the following file, just open it.

MaskNode_Assert.blend

Assert:

BLI_assert failed: c:\myblender\blenderdev\blender\source\blender\depsgraph\intern\builder\deg_builder_nodes.cc:1454, DEG::DepsgraphNodeBuilder::build_nodetree(), at '!"Unknown ID type used for node"'
Windows 10 version compiled with last source code To repoduce: 1) Open default cube 2) Render on Eevee 3) Enable Compositor 4) Set Use node to ON 5) Add a Mask Node 6) Using Image editor create a mask using Ctrl + Mouse 7) Select Mask in Mask Node 8) Save File 9) Reload File 10) Crash Or you can use the following file, just open it. [MaskNode_Assert.blend](https://archive.blender.org/developer/F5231138/MaskNode_Assert.blend) Assert: ``` BLI_assert failed: c:\myblender\blenderdev\blender\source\blender\depsgraph\intern\builder\deg_builder_nodes.cc:1454, DEG::DepsgraphNodeBuilder::build_nodetree(), at '!"Unknown ID type used for node"' ```
Author
Member

Added subscriber: @antoniov

Added subscriber: @antoniov
Author
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Author
Member

@Sergey I think this one is for you.

@Sergey I think this one is for you.
Author
Member

The error is in*DepsgraphNodeBuilder::build_nodetree(bNodeTree ntree) function because the type Mask is not valid id_type.

The error is in**DepsgraphNodeBuilder::build_nodetree(bNodeTree *ntree)** function because the type Mask is not valid id_type.

This issue was referenced by 262504ddd1

This issue was referenced by 262504ddd190a66f9d8353afc2c2da653a998cc4
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Sergey Sharybin was assigned by Philipp Oeser 2018-10-26 10:39:06 +02:00
Member

Functionality was already there in build_id (but not in build_nodetree), so I guess D3831 could do it?

Functionality was already there in build_id (but not in build_nodetree), so I guess [D3831](https://archive.blender.org/developer/D3831) could do it?
Sergey Sharybin removed their assignment 2018-10-29 10:37:43 +01:00
Philipp Oeser was assigned by Sergey Sharybin 2018-10-29 10:37:43 +01:00

@lichtwerk , the patch seems correct, please commit it :)

P.S. Assigning to you, so you can keep track of what to do ;)

@lichtwerk , the patch seems correct, please commit it :) P.S. Assigning to you, so you can keep track of what to do ;)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57384
No description provided.