Fix T57384: Depsgraph assert after loading file with Mask Node

Maniphest Tasks: T57384

Differential Revision: https://developer.blender.org/D3831